--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -17,5 +17,10 @@ services:
         public: true
         tags: 
             - { name : twig.extension}
+    app.locale_listener:
+        class: BlogBundle\EventListener\LocaleListener
+        arguments: ["%kernel.default_locale%"]
+        tags:
+            - { name: kernel.event_subscriber }
             
     
