--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,6 +26,8 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
+                default_target_path: /
+                always_use_default_target_path: true
             logout:
                 path: /logout
                 target: /login
