--- a/src/AdminBundle/Resources/config/services.yml
+++ b/src/AdminBundle/Resources/config/services.yml
@@ -1,7 +1,14 @@
 services:
     admin.user:
         class: AdminBundle\Admin\UserAdmin
-        arguments: [~, GestoriaBundle\Entity\User, ~]
+        arguments: [~, GestoriaBundle\Entity\User, "AdminBundle:UserAdmin"]
         tags:
             - { name: sonata.admin, manager_type: orm, label: User }
         public: true
+    admin.roles:
+        class: AdminBundle\Admin\RoleAdmin
+        arguments: [~, GestoriaBundle\Entity\Role, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Roles }
+        public: true
+        
